# MeloTTS

./: pyproject.toml
melo/: api.py  app.py  download_utils.py  http.py  main.py  models.py  modules.py  utils.py
melo/text/: __init__.py  cleaner.py  english.py  english_bert.py
test/: test_http.py
