[tool.poetry]
name = "melo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.38.1"
torch = "^2.3.1"
soundfile = "^0.12.1"
torchaudio = "^2.3.1"
g2p-en = "^2.1.0"
transformers = "^4.42.4"
numba = "^0.60.0"
cached-path = "^1.6.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "melo.app:main"

[tool.black]
line-length = 120

[tool.isort]
line-length = 120
profile = "black"

[tool.ruff]
line-length = 120
